--- a/css/index/slider.less
+++ b/css/index/slider.less
@@ -89,7 +89,7 @@
   }
 
   #main-fast-contacts{
-    background: @main url('images/contact-bg.png') top no-repeat;
+    background: @main url('@{image-path}images/contact-bg.png') top no-repeat;
     color: #fff;
     padding: 20px;
     min-height: 60vh;
