--- a/css/layout/header.less
+++ b/css/layout/header.less
@@ -1,4 +1,5 @@
-@image-path: '../';
+@import "../settings";
+
 @image-file: 'day.jpg';
 @image: '@{image-path}images/photos/@{image-file}';
 @blured-image: '@{image-path}images/photos/blured/@{image-file}';
