--- a/css/index.css
+++ b/css/index.css
@@ -92,7 +92,7 @@
   }
 }
 #main-slider #main-fast-contacts {
-  background: #1d3d86 url('images/contact-bg.png') top no-repeat;
+  background: #1d3d86 url('../images/contact-bg.png') top no-repeat;
   color: #fff;
   padding: 20px;
   min-height: 60vh;
@@ -320,7 +320,7 @@
   }
 }
 #main-featured-links .gallery {
-  background-image: url('images/photos/main.jpg');
+  background-image: url('../images/photos/main.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -363,6 +363,65 @@
   -moz-box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
 }
+/** @deprecated
+#featured-links-wrapper{
+  padding: 20px 0;
+
+  h2{
+    font-size: 2rem;
+    padding: 0 0 0 20px;
+
+    @media (max-width: 700px) {
+      padding: 10px;
+    }
+  }
+}
+
+div#featured-links{
+  padding: 20px 0 40px 20px;
+
+  @media (max-width: 700px) {
+    padding: 10px 0;
+  }
+
+  div.featured-link{
+    background-position: center;
+    background-size: cover;
+    color: #fff;
+    float: left;
+    display: inline-block;
+    height: 160px;
+    width: 50%;
+
+    a:hover{
+      text-decoration: none;
+    }
+
+    .overlay{
+      //background: fadeOut(@main, 30%);
+      color: #fff;
+      padding: 1rem;
+      text-align: left;
+      height: 100%;
+      width: 100%;
+
+      .lh-box-sizing(border-box);
+      .lh-transition(background ease .25s);
+
+      h5{
+        background: #fff;
+        color: @main;
+        display: inline;
+        line-height: 150%;
+      }
+
+      &:hover{
+        background: rgba(255,255,255,.5);
+      }
+    }
+  }
+
+}*/
 #main-content .fake-bg-header {
   background: #eee;
   height: 60px;
@@ -401,7 +460,7 @@
   }
 }
 #main-news article .left {
-  background-image: url("images/mileline.png");
+  background-image: url("../images/mileline.png");
   background-position: top;
   background-repeat: repeat-y;
   display: table-cell;
@@ -588,9 +647,9 @@
     color: #1d3d86;
     text-shadow: none;
     text-decoration: none;
-    -webkit-box-shadow: inset 0 1px #ffffff;
-    -moz-box-shadow: inset 0 1px #ffffff;
-    box-shadow: inset 0 1px #ffffff;
+    -webkit-box-shadow: inset 0 1px #fff;
+    -moz-box-shadow: inset 0 1px #fff;
+    box-shadow: inset 0 1px #fff;
   }
   #main-news article.more-news .content {
     display: block;
@@ -609,7 +668,7 @@
   }
 }
 #main-events header {
-  background: #ff6f51;
+  background: #FF6F51;
   color: #fff;
   height: 60px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -705,7 +764,7 @@
 }
 .biw {
   font-size: 20px;
-  font-weight: bold !important;
+  font-weight: bold;
 }
 .biw .swiper-slide h3 {
   color: #000;
