--- a/css/index.less
+++ b/css/index.less
@@ -7,9 +7,9 @@
 @import "index/news";
 @import "index/events";
 
-.biw{
+.biw {
   font-size: 20px;
-  font-weight: bold !important;
+  font-weight: bold;
 
   @import "index/biw/total";
 }
